--- a/Demo1/index.html
+++ b/Demo1/index.html
@@ -7,6 +7,84 @@
         <h1>Hello World</h1>
         <h2>Sofware Engineering</h2>
         <h3>Supanee Rungsirat</h3>
-        test
+        <a href="http://www.npru.ac.th">Click me</a>
+        <a href="#Footer">Click me</a>
+
+
+
+
+        <p>Softwere Enginering</p>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Itaque, expedita pariatur perferendis quia fugit modi 
+        excepturi quasi corrupti numquam, vitae alias nulla libero perspiciatis magni? Ut ullam odio beatae ducimus?</p>
+        <p><strong>Lorem ipsum dolor</strong> sit amet consectetur adipisicing elit. Debitis temporibus dicta rerum non 
+        quia minima quos rem expedita aliquid. Mollitia deserunt adipisci debitis, odit ut voluptate exercitationem nam praesentium animi.</p>
+        <hr>
+        <img src="https://p4.wallpaperbetter.com/wallpaper/920/588/1017/a-turtles-tale-sammys-adventures-wallpaper-preview.jpg"alt="Samee"
+        width="250px">
+        <a name="Footer"></a>
+
+        <ol type="a">
+            <li>list 1</li>
+            <li>list 2</li>
+            <li>list 3</li>
+            <li>list 4</li>
+            <li>list 5</li>
+        </ol>
+
+        <ul type="square">
+            <li>list 1</li>
+            <li>list 2</li>
+            <li>list 3</li>
+            <li>list 4</li>
+            <li>list 5</li>
+        </ul>
+
+        <table border="1" bgcolor="lightBlue"> 
+            <thead>
+                <th>Number</th>
+                <th>Name</th>
+                <th>LastName</th>
+            </thead>
+            <tbody>
+                <tr>
+                    <td align="center">1</td>
+                    <td>Supanee</td>
+                    <td>Rungsirat</td>
+                </tr>
+                <tr>
+                    <td align="center">2</td>
+                    <td>Toto</td>
+                    <td>Tata</td>
+                </tr>
+            </tbody>
+        </table>
+        
+        <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo placeat similique totam expedita quidem atque ullam omnis sapiente molestias reprehenderit maxime at 
+            saepe repellat, voluptatem, deleniti aperiam, magni distinctio modi.</span> 
+
+            <div>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Architecto a rem aperiam similique explicabo officiis. Porro repudiandae et, praesentium tempore quae
+                 harum omnis neque quisquam, consectetur nulla quaerat velit corporis.</div>
+
+                 <input type="checkbox">
+                 <input type="color">
+                 <input type="date">
+                 <input type="datetime-local">
+                 <input type="email">
+                 <input type="file">
+                 <input type="hidden">
+                 <input type="image">
+                 <input type="month">
+                 <input type="number">
+                 <input type="password">
+                 <input type="radio">
+                 <input type="range">
+                 <input type="reset">
+                 <input type="search">
+                 <input type="submit">
+                 <input type="tel">
+                 <input type="text">
+                 <input type="time">
+                 <input type="url">
+                 <input type="week">
     </body>
-</html>A
+</html>
