--- a/workshop1-portfolio/index.html
+++ b/workshop1-portfolio/index.html
@@ -51,22 +51,25 @@
                 <p class="tab-link" onclick="opentab('Experience')">Experience</p>
                 <p class="tab-link" onclick="opentab('Education')">Education</p>
             </div>
-            <div class="tap-content active-tap" id="skills" >
+            <div class="tab-content active-tab" id="Skills">
                 <ul>
-                    <li><span>Design</span> <br/> AI AE PS Figma</li>
-                    <li><span>Protographer<br/>Portrait</li>
+                    <li><span>Design</span> <br/> Adobe</li>
+                    <li><span>Photography</span> <br/> Close up <br/> Portrait </li>
                 </ul>
             </div>
-            <div class="tap-content" id="experience">
-                    <ul>
-                        <li><span>Train</span> <br/> Nakhon Pathom Vocational College </li>
-                    </ul>
-                </div>
-            <div class="tap-content" id="Education">
-                    <ul>
-                        <li><span>Design</span> <br/> AI AE PS Figma</li>
-                        <li>Protographer<br/>Portrait</li>
-                    </ul>
+
+            <div class="tab-content" id="Experience">
+                <ul>
+                    <li><span>Train</span> <br/> Nakhon Pathom Vocational College </li>
+                </ul>
+            </div>
+
+            <div class="tab-content" id="Education">
+                <ul>
+                    <li><span>Elementary School</span> <br/>Thephwithya School</li>
+                    <li><span>Middle School</span> <br/>Thephwithya School</li>
+                    <li><span>High School</span> <br/>Nakhon Pathom Vocational College</li>
+                </ul>
             </div>
             </div>
 
