--- a/workshop1-portfolio/index.html
+++ b/workshop1-portfolio/index.html
@@ -9,6 +9,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Crimson+Text&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" 
+    integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" 
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
     <!--Header Section-->
@@ -53,7 +56,8 @@
             </div>
             <div class="tab-content active-tab" id="Skills">
                 <ul>
-                    <li><span>Design</span> <br/> Adobe</li>
+                    <li><span>Design</span> <br/> Canva <br/> Photoshop <br/> 
+                        Illustrator <br/> Premiere Pro <br/> InDesign</li>
                     <li><span>Photography</span> <br/> Close up <br/> Portrait </li>
                 </ul>
             </div>
@@ -77,11 +81,119 @@
         </div>
     </div>
 </div>
-    <!--About Section-->
-    <!--Services/Projescts Section-->
-    <!--Portfolio Section-->
-    <!--Contact Section-->
 
+    <!--Services/Projescts Section-->
+    <div class="services">
+        <div class="container">
+            <h1 class="sub-title">My Services </h1>
+            <div class="services-list">
+                <div class="service-item">
+                    <i class="fa-solid fa-code"></i>
+                    <h2>Web Design</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                        Repudiandae recusandae ratione temporibus. 
+                        Possimus cupiditate consectetur, pariatur aliquam, 
+                        accusantium ab soluta consequatur,
+                        ipsa illo provident iure quas ut? Magnam, fuga nihil.</p>
+                        <a href="#">Learn more</a>
+                </div>
+                <div class="service-item">
+                    <i class="fa-sharp fa-solid fa-hashtag"></i>
+                    <h2>Web Design</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                        <br/>Repudiandae recusandae ratione temporibus. 
+                        Possimus cupiditate consectetur, pariatur aliquam, 
+                        accusantium ab soluta consequatur,
+                        ipsa illo provident iure quas ut? Magnam, fuga nihil.</p>
+                        <a href="#">Learn more</a>
+                </div>
+                <div class="service-item">
+                    <i class="fa-solid fa-thumbs-up"></i>
+                    <h2>Web Design</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                        Repudiandae recusandae ratione temporibus. 
+                        Possimus cupiditate consectetur, pariatur aliquam, 
+                        accusantium ab soluta consequatur,
+                        ipsa illo provident iure quas ut? Magnam, fuga nihil.</p>
+                        <a href="#">Learn more</a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!--Portfolio Section-->
+    <div class="portfolio">
+        <div class="contauner">
+            <h1 class="sub-title">My Works</h1>
+            <div class="works-list">
+                <div class="work">
+                    <img src="./images/1623227211809_polarr.jpg" alt="work-1">
+                    <div class="layer">
+                        <h3>Socail Medai App</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Impedit, nihil amet? A libero, nihil quod,
+                            rerum recusandae adipisci voluptatibus quibusdam dolore nesciunt harum reiciendis dicta at natus inventore minus pariatur.</p>
+                        <a href="a">
+                            <i class="fa-regular fa-share-from-square"></i>
+                        </a>
+                    </div>
+                </div>
+                <div class="work">
+                    <img src="./images/1623476274295_polarr.jpg" alt="work-2">
+                    <div class="layer">
+                        <h3>Socail Medai App</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Impedit, nihil amet? A libero, nihil quod,
+                            rerum recusandae adipisci voluptatibus quibusdam dolore nesciunt harum reiciendis dicta at natus inventore minus pariatur.</p>
+                        <a href="a">
+                            <i class="fa-regular fa-share-from-square"></i>
+                        </a>
+                    </div>
+                </div>
+                    <div class="work">
+                        <img src="./images/1623227192520 (1)_polarr.jpg" alt="work-3">
+                        <div class="layer">
+                            <h3>Socail Medai App</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Impedit, nihil amet? A libero, nihil quod,
+                                rerum recusandae adipisci voluptatibus quibusdam dolore nesciunt harum reiciendis dicta at natus inventore minus pariatur.</p>
+                            <a href="a">
+                                <i class="fa-regular fa-share-from-square"></i>
+                            </a>
+                        </div>
+                    </div>
+            </div>
+            <a href="#" class="btn">See Mor</a>
+        </div>
+    </div>
+
+    <!--Contact Section-->
+    <div class="contact">
+        <div class="container">
+            <div class="row">
+                <div class="contact-left">
+                    <h1 class="sub-title">Contact Me</h1>
+                    <p><i class="fa-solid fa-envelope"></i>suphaneerangsirat@gmail.com</p>
+                    <p><i class="fa-solid fa-phone"></i>0625296151</p>
+                    <div class="social-icons">
+                        <a href="#"><i class="fa-brands fa-facebook"></i></a>
+                        <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                        <a href="#"><i class="fa-brands fa-twitter"></i></a>
+                    </div>
+                    <a href="downloads/my-cv.pdf">Download CV</a>
+                </div>
+                <div class="contact-right">
+                    <form action="">
+                        <input type="text" name="name" placeholder="Your Name" required />
+                        <input type="text" name="email" placeholder="Your Email" required />
+                        <textarea name="message" id="message" rows="6"></textarea>
+                        <button type="submit" class="btn btn2" >submit</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="copyright">
+        <p>copyright<i class="fa-solid fa-copyright"></i> Supanee Rungsirat
+        Made with <i class="fa-solid fa-handshake">by Supanee Rungsirat</i></p>
+    </div>
 
     <script>
         const tablinks = document.getElementsByClassName("tab-link");
