--- a/workshop1-portfolio/index.html
+++ b/workshop1-portfolio/index.html
@@ -98,8 +98,8 @@
                         <a href="#">Learn more</a>
                 </div>
                 <div class="service-item">
-                    <i class="fa-sharp fa-solid fa-hashtag"></i>
-                    <h2>Web Design</h2>
+                    <i class="fa-solid fa-pen-nib"></i>
+                    <h2>Design</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                         <br/>Repudiandae recusandae ratione temporibus. 
                         Possimus cupiditate consectetur, pariatur aliquam, 
@@ -108,8 +108,8 @@
                         <a href="#">Learn more</a>
                 </div>
                 <div class="service-item">
-                    <i class="fa-solid fa-thumbs-up"></i>
-                    <h2>Web Design</h2>
+                    <i class="fa-solid fa-camera-retro"></i>
+                    <h2>Photography</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                         Repudiandae recusandae ratione temporibus. 
                         Possimus cupiditate consectetur, pariatur aliquam, 
@@ -126,9 +126,9 @@
             <h1 class="sub-title">My Works</h1>
             <div class="works-list">
                 <div class="work">
-                    <img src="./images/1623227211809_polarr.jpg" alt="work-1">
+                    <img src="./images/image (1).png" alt="work-1">
                     <div class="layer">
-                        <h3>Socail Medai App</h3>
+                        <h3>Web Design</h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Impedit, nihil amet? A libero, nihil quod,
                             rerum recusandae adipisci voluptatibus quibusdam dolore nesciunt harum reiciendis dicta at natus inventore minus pariatur.</p>
                         <a href="a">
@@ -137,9 +137,9 @@
                     </div>
                 </div>
                 <div class="work">
-                    <img src="./images/1623476274295_polarr.jpg" alt="work-2">
+                    <img src="./images/image (2).png" alt="work-2">
                     <div class="layer">
-                        <h3>Socail Medai App</h3>
+                        <h3>Design</h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Impedit, nihil amet? A libero, nihil quod,
                             rerum recusandae adipisci voluptatibus quibusdam dolore nesciunt harum reiciendis dicta at natus inventore minus pariatur.</p>
                         <a href="a">
@@ -150,7 +150,7 @@
                     <div class="work">
                         <img src="./images/1623227192520 (1)_polarr.jpg" alt="work-3">
                         <div class="layer">
-                            <h3>Socail Medai App</h3>
+                            <h3>Photography</h3>
                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Impedit, nihil amet? A libero, nihil quod,
                                 rerum recusandae adipisci voluptatibus quibusdam dolore nesciunt harum reiciendis dicta at natus inventore minus pariatur.</p>
                             <a href="a">
@@ -159,7 +159,7 @@
                         </div>
                     </div>
             </div>
-            <a href="#" class="btn">See Mor</a>
+            <a href="#" class="btn">See More</a>
         </div>
     </div>
 
@@ -191,8 +191,8 @@
     </div>
 
     <div class="copyright">
-        <p>copyright<i class="fa-solid fa-copyright"></i> Supanee Rungsirat
-        Made with <i class="fa-solid fa-handshake">by Supanee Rungsirat</i></p>
+        <p>copyright <i class="fa-solid fa-copyright"></i> supanee rungsirat
+        Made with <i class="fa-solid fa-handshake"> by Supanee Rungsirat </i></p>
     </div>
 
     <script>
